--- a/index.html
+++ b/index.html
@@ -25,7 +25,26 @@
       <div class="crossnote markdown-preview  ">
       
 <h2 id="何謂氣場">何謂氣場 </h2>
+<ul>
+<li>Aura,氣場,人體能量場,輝光,暉光,靈氣這些都是代表一樣的定義.</li>
+</ul>
 <h2 id="起源">起源 </h2>
+<ul>
+<li>西元前500-700年,印度的奧義書有提到五層能量場,但是沒有提到光</li>
+<li>西元前320年,葛洪(號抱朴子),第一次以文獻方式紀錄人體周圍的光環及光</li>
+</ul>
+<h2 id="氣場七層介紹">氣場七層介紹 </h2>
+<ul>
+<li>第一層:生理層(Physical),與身體健康有關,常見的克里安照相技術,kirlian,GDV都是在屬於這一層</li>
+<li>第二層:乙太層(Etheirc),共有雙層,第二層代表永恆的自己,這裡保存輪迴,記憶,潛意識,並在人體死亡時把靈魂載走. 而一般所謂的鬼魂,也就是看到這一層.</li>
+<li>第三層:活力/生命能量(Vital),不只吸收能量,也是唯一還會對外發射能量.</li>
+<li>第四層: 星光體(Astral),橢圓型,也稱為光環蛋</li>
+<li>第五層: 心智內層(Lower mental)</li>
+<li>第六層: 心智外層(Higher mental)</li>
+<li>第七層: 靈性(Spirtual)</li>
+</ul>
+<h2 id="氣場圖實際範例">氣場圖實際範例 </h2>
+<p><img src="./aura.jpg" alt="氣場圖"></p>
 
       </div>
       
