--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
     
       <div class="crossnote markdown-preview  ">
       
+<h1 id="關於我">關於我 </h1>
+<h2 id="聯絡方式">聯絡方式 </h2>
+<ul>
+<li>Line 帳號 @211wegrx</li>
+<li>IG 帳號 taomuru</li>
+<li>Threads 帳號 @taomuru</li>
+<li>Youtube 頻道 <a href="https://www.youtube.com/@thaolaxd">https://www.youtube.com/@thaolaxd</a></li>
+</ul>
+<h2 id="服務方式">服務方式 </h2>
+<ul>
+<li>需要提供一張全身照片, 並參考下方照片的人像大小,背景,姿勢,穿著<br>
+<img src="./aura-body.png" alt="氣場拍照姿勢"></li>
+</ul>
+<h1 id="氣場介紹">氣場介紹 </h1>
 <h2 id="何謂氣場">何謂氣場 </h2>
 <ul>
 <li>Aura,氣場,人體能量場,輝光,暉光,靈氣這些都是代表一樣的定義.</li>
@@ -38,12 +52,12 @@
 <li>第一層:生理層(Physical),與身體健康有關,常見的克里安照相技術,kirlian,GDV都是在屬於這一層</li>
 <li>第二層:乙太層(Etheirc),共有雙層,第二層代表永恆的自己,這裡保存輪迴,記憶,潛意識,並在人體死亡時把靈魂載走. 而一般所謂的鬼魂,也就是看到這一層.</li>
 <li>第三層:活力/生命能量(Vital),不只吸收能量,也是唯一還會對外發射能量.</li>
-<li>第四層: 星光體(Astral),橢圓型,也稱為光環蛋</li>
-<li>第五層: 心智內層(Lower mental)</li>
-<li>第六層: 心智外層(Higher mental)</li>
-<li>第七層: 靈性(Spirtual)</li>
+<li>第四層: 星光體(Astral),橢圓型,也稱為光環蛋,與周遭能量互動</li>
+<li>第五層: 心智內層(Lower mental),智力水平</li>
+<li>第六層: 心智外層(Higher mental),連結宇宙智慧</li>
+<li>第七層: 靈性(Spirtual),吸收宇宙能量供生命使用</li>
 </ul>
-<h2 id="氣場圖實際範例">氣場圖實際範例 </h2>
+<h2 id="氣場圖">氣場圖 </h2>
 <p><img src="./aura.jpg" alt="氣場圖"></p>
 
       </div>
