--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <h2 id="服務方式">服務方式 </h2>
 <ul>
 <li>需要提供一張全身照片, 並參考下方照片的人像大小,背景,姿勢,穿著<br>
-<img src="./aura-body.png" alt="氣場拍照姿勢"></li>
+<img src="./aura-body.jpg" alt="氣場拍照姿勢"></li>
 </ul>
 <h1 id="氣場介紹">氣場介紹 </h1>
 <h2 id="何謂氣場">何謂氣場 </h2>
