--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     
       <div class="crossnote markdown-preview  ">
       
-<h1 id="關於我">關於我 </h1>
 <h2 id="聯絡方式">聯絡方式 </h2>
 <ul>
 <li>Line 帳號 @211wegrx</li>
@@ -34,10 +33,13 @@
 </ul>
 <h2 id="服務方式">服務方式 </h2>
 <ul>
-<li>需要提供一張全身照片, 並參考下方照片的人像大小,背景,姿勢,穿著<br>
+<li>需要提供一張全身照片, 並參考下方照片的人像大小,背景,姿勢,穿著</li>
+<li>提供Aura基礎解讀報告一份(可指定報告的語文,例如英文,中文,等等)</li>
+<li>提供深度諮詢: 例如個人,家庭,情侶,工作職業,情緒心理,未來預測,靈性問題(額外收費)</li>
+<li>不提供健康諮詢,不提供過世親人通靈</li>
+<li>使用Paypal付款<br>
 <img src="./aura-body.jpg" alt="氣場拍照姿勢"></li>
 </ul>
-<h1 id="氣場介紹">氣場介紹 </h1>
 <h2 id="何謂氣場">何謂氣場 </h2>
 <ul>
 <li>Aura,氣場,人體能量場,輝光,暉光,靈氣這些都是代表一樣的定義.</li>
