--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <h2 id="聯絡方式">聯絡方式 </h2>
 <ul>
 <li>Line 帳號 @211wegrx</li>
-<li>IG 帳號 taomuru</li>
-<li>Threads 帳號 @taomuru</li>
+<li>IG 帳號 <a href="https://www.instagram.com/taomuru/">taomuru</a></li>
+<li>Threads 帳號 <a href="https://www.threads.com/@taomuru">@taomuru</a></li>
 <li>Youtube 頻道 <a href="https://www.youtube.com/@thaolaxd">https://www.youtube.com/@thaolaxd</a></li>
 </ul>
 <h2 id="服務方式">服務方式 </h2>
