--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <li>需要提供一張全身照片, 並參考下方照片的人像大小,背景,姿勢,穿著</li>
 <li>提供Aura基礎解讀報告一份(可指定報告的語文,例如英文,中文,等等)</li>
 <li>提供問題諮詢: 例如個人,家庭,情侶,工作職業,情緒心理,未來預測,靈性問題(額外收費)</li>
-<li>不提供健康諮詢,不提供過世親人通靈</li>
+<li>不提供健康問題諮詢,不提供過世親人通靈</li>
 <li>使用Paypal付款<br>
 <img src="./aura-body.jpg" alt="氣場拍照姿勢"></li>
 </ul>
