--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
 <li>使用Paypal付款<br>
 <img src="./aura-body.jpg" alt="氣場拍照姿勢"></li>
 </ul>
+<h2 id="經歷">經歷 </h2>
+<ul>
+<li>中興大學應用數學系</li>
+<li>中興大學資訊科學研究所</li>
+<li>曾擔任多家公司主管及新創公司CEO<br>
+<img src="./me.jpg" alt="經歷"></li>
+</ul>
 <h2 id="何謂氣場">何謂氣場 </h2>
 <ul>
 <li>Aura,氣場,人體能量場,輝光,暉光,靈氣這些都是代表一樣的定義.</li>
