--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </ul>
 <h2 id="經歷">經歷 </h2>
 <ul>
-<li>中興大學應用數學系跟資訊科學研究所</li>
+<li>中興大學應用數學系跟資訊科學研究所畢業</li>
 <li>曾擔任多家公司主管及新創公司CEO<br>
 <img src="./me.jpg" alt="經歷"></li>
 </ul>
