--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <li>西元前500-700年,印度的奧義書有提到五層能量場,但是沒有提到光</li>
 <li>西元前320年,葛洪(號抱朴子),第一次以文獻方式紀錄人體周圍的光環及光</li>
 </ul>
-<h2 id="氣場七層介紹">氣場七層介紹 </h2>
+<h2 id="氣場七層">氣場七層 </h2>
 <ul>
 <li>第一層:生理層(Physical),與身體健康有關,常見的克里安照相技術,kirlian,GDV都是在屬於這一層</li>
 <li>第二層:乙太層(Etheirc),共有雙層,第二層代表永恆的自己,這裡保存輪迴,記憶,潛意識,並在人體死亡時把靈魂載走. 而一般所謂的鬼魂,也就是看到這一層.</li>
