--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <li>提供Aura基礎解讀報告一份(可指定報告的語文,例如英文,中文,等等)</li>
 <li>提供問題諮詢: 例如個人,家庭,情侶,工作職業,情緒心理,未來預測,靈性問題(額外收費)</li>
 <li>不提供健康問題諮詢,不提供過世親人通靈</li>
-<li>使用Paypal付款<br>
+<li>支援Paypal付款<br>
 <img src="./aura-body.jpg" alt="氣場拍照姿勢"></li>
 </ul>
 <h2 id="經歷">經歷 </h2>
