--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 </ul>
 <h2 id="服務方式">服務方式 </h2>
 <ul>
+<li>線上諮詢</li>
 <li>需要提供一張全身照片, 並參考下方照片的人像大小,背景,姿勢,穿著</li>
 <li>提供Aura基礎解讀報告一份(可指定報告的語文,例如英文,中文,等等)</li>
 <li>提供問題諮詢: 例如個人,家庭,情侶,工作職業,情緒心理,未來預測,靈性問題(額外收費)</li>
@@ -40,22 +41,23 @@
 <li>支援Paypal付款<br>
 <img src="./aura-body.jpg" alt="氣場拍照姿勢"></li>
 </ul>
-<h2 id="經歷">經歷 </h2>
+<h2 id="關於我">關於我 </h2>
 <ul>
 <li>中興大學應用數學系跟資訊科學研究所畢業</li>
 <li>曾擔任多家公司主管及新創公司CEO<br>
-<img src="./me.jpg" alt="經歷"></li>
+<img src="./me.jpg" alt="關於我"></li>
 </ul>
-<h2 id="何謂氣場">何謂氣場 </h2>
+<h2 id="何謂aura氣場">何謂Aura氣場 </h2>
 <ul>
-<li>Aura,氣場,人體能量場,輝光,暉光,靈氣這些都是代表一樣的定義.</li>
+<li>Aura,有人稱為: 氣場,人體能量場,輝光,暉光,靈氣</li>
+<li>範圍涵蓋人體及人體周圍電磁粒子</li>
 </ul>
-<h2 id="起源">起源 </h2>
+<h2 id="aura氣場起源">Aura氣場起源 </h2>
 <ul>
 <li>西元前500-700年,印度的奧義書有提到五層能量場,但是沒有提到光</li>
 <li>西元前320年,葛洪(號抱朴子),第一次以文獻方式紀錄人體周圍的光環及光</li>
 </ul>
-<h2 id="氣場七層">氣場七層 </h2>
+<h2 id="aura氣場七層">Aura氣場七層 </h2>
 <ul>
 <li>第一層: 生理層(Physical),與身體健康有關,常見的克里安照相技術,kirlian,GDV都是在屬於這一層</li>
 <li>第二層: 乙太層(Etheirc),共有雙層,第二層代表永恆的自己,這裡保存輪迴,記憶,潛意識,並在人體死亡時把靈魂載走. 而一般所謂的鬼魂,也就是看到這一層.</li>
@@ -65,8 +67,8 @@
 <li>第六層: 心智外層(Higher mental),連結宇宙智慧</li>
 <li>第七層: 靈性(Spirtual),吸收宇宙能量供生命使用</li>
 </ul>
-<h2 id="氣場圖">氣場圖 </h2>
-<p><img src="./aura.jpg" alt="氣場圖"></p>
+<h2 id="aura氣場圖">Aura氣場圖 </h2>
+<p><img src="./aura.jpg" alt="Aura氣場圖"></p>
 
       </div>
       
