--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <h2 id="關於我">關於我 </h2>
 <ul>
 <li>中興大學應用數學系跟資訊科學研究所畢業</li>
-<li>曾擔任多家公司主管及新創公司CEO<br>
+<li>曾經擔任多家公司主管及新創公司CEO<br>
 <img src="./me.jpg" alt="關於我"></li>
 </ul>
 <h2 id="何謂aura氣場">何謂Aura氣場 </h2>
