--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 <h2 id="服務方式">服務方式 </h2>
 <ul>
 <li>線上諮詢</li>
-<li>需要提供一張全身照片, 並參考下方照片的人像大小,背景,姿勢,穿著</li>
 <li>提供Aura基礎解讀報告一份(可指定報告的語文,例如英文,中文,等等)</li>
 <li>提供問題諮詢: 例如個人,家庭,情侶,工作職業,情緒心理,未來預測,靈性問題(額外收費)</li>
 <li>不提供健康問題諮詢,不提供過世親人通靈</li>
-<li>支援Paypal付款<br>
+<li>支援Paypal付款</li>
+<li>需要提供一張全身照片, 並參考下方照片,注意人像比例跟姿勢, 頭頂上方空間佔據30%, 人佔據照片高度的20%, 腳底到最下方的空間佔據30%, 掌心向前, 背景最好是淡色的牆壁, 最好是短袖短褲<br>
 <img src="./aura-body.jpg" alt="氣場拍照姿勢"></li>
 </ul>
 <h2 id="關於我">關於我 </h2>
