--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <li>支援Paypal付款</li>
 <li>需要提供一張全身照片, 並參考下方照片,注意人像比例跟姿勢, 頭頂上方空間佔據30%, 人佔據照片高度的20%, 腳底到最下方的空間佔據30%, 掌心向前, 背景最好是淡色的牆壁, 最好是短袖短褲<br>
 <img src="./aura-body.jpg" alt="氣場拍照姿勢"></li>
-<li>歡迎在Google上給我評價 <a href="https://g.page/r/CQfz6lbreLYLEBM/review">https://g.page/r/CQfz6lbreLYLEBM/review</a></li>
+<li>Google評價 <a href="https://g.page/r/CQfz6lbreLYLEBM/review">https://g.page/r/CQfz6lbreLYLEBM/review</a></li>
 </ul>
 <h2 id="關於我">關於我 </h2>
 <ul>
