--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </ul>
 <h2 id="服務方式">服務方式 </h2>
 <ul>
-<li>線上諮詢</li>
+<li>線上諮詢,可文字,語音或視訊(Line, Zoom, Google Meet, WeChat, Whatsapp, Telegram, Email)</li>
 <li>提供Aura基礎解讀報告一份(可指定報告的語文,例如英文,中文,等等)</li>
 <li>提供問題諮詢: 例如個人,家庭,情侶,工作職業,情緒心理,未來預測,靈性問題(額外收費)</li>
 <li>不提供健康問題諮詢,不提供過世親人通靈</li>
@@ -44,14 +44,19 @@
 </ul>
 <h2 id="關於我">關於我 </h2>
 <ul>
-<li>中興大學應用數學系跟資訊科學研究所畢業</li>
+<li>畢業於中興大學應用數學系跟資訊科學研究所</li>
 <li>曾經擔任多家公司主管及新創公司CEO<br>
 <img src="./me.jpg" alt="關於我"></li>
 </ul>
+<h2 id="合作">合作 </h2>
+<ul>
+<li>歡迎療癒師,心理輔導諮商單位合作</li>
+<li>公益活動歡迎洽詢</li>
+</ul>
 <h2 id="何謂aura氣場">何謂Aura氣場 </h2>
 <ul>
-<li>Aura,有人稱為: 氣場,人體能量場,輝光,暉光,靈氣</li>
-<li>範圍涵蓋人體及人體周圍電磁粒子</li>
+<li>Aura,氣場,人體能量場,輝光,暉光,靈氣</li>
+<li>範圍涵蓋人體周圍電磁粒子</li>
 </ul>
 <h2 id="aura氣場起源">Aura氣場起源 </h2>
 <ul>
