--- a/index.html
+++ b/index.html
@@ -42,26 +42,55 @@
 <img src="./aura-body.jpg" alt="氣場拍照姿勢"></li>
 <li>Google評價 <a href="https://g.page/r/CQfz6lbreLYLEBM/review">https://g.page/r/CQfz6lbreLYLEBM/review</a></li>
 </ul>
+<h2 id="service-method">Service Method </h2>
+<ul>
+<li>Online consultation via text, voice, or video</li>
+<li>Includes one basic Aura reading report (you may specify the report language, e.g., English, Chinese, etc.)</li>
+<li>Provides one-on-one consultation (additional fee)</li>
+<li>No consultation for health issues, no communication with deceased relatives</li>
+<li>Supports PayPal payment</li>
+<li>A full-body photo is required. Please refer to the sample photo above and pay attention to body proportion and posture: 30% empty space above the head, the person occupies 20% of the photo height, 30% empty space from the feet to the bottom, palms facing forward, preferably with a light-colored wall background, and ideally wearing short sleeves and shorts.</li>
+</ul>
 <h2 id="關於我">關於我 </h2>
 <ul>
 <li>畢業於中興大學應用數學系跟資訊科學研究所</li>
 <li>曾經擔任多家公司主管及新創公司CEO<br>
 <img src="./me.jpg" alt="關於我"></li>
 </ul>
+<h2 id="about-me">About Me </h2>
+<ul>
+<li>Graduated from National Chung Hsing University, Department of Applied Mathematics and Institute of Computer Science</li>
+<li>Former manager in several companies and CEO of a startup</li>
+</ul>
 <h2 id="合作">合作 </h2>
 <ul>
 <li>歡迎療癒師,心理輔導諮商單位合作</li>
 <li>公益活動歡迎洽詢</li>
+</ul>
+<h2 id="collaboration">Collaboration </h2>
+<ul>
+<li>Healers and psychological counseling organizations are welcome to collaborate</li>
+<li>Public welfare events are welcome to inquire about</li>
 </ul>
 <h2 id="何謂aura氣場">何謂Aura氣場 </h2>
 <ul>
 <li>Aura,氣場,人體能量場,輝光,暉光,靈氣</li>
 <li>範圍涵蓋人體周圍電磁粒子</li>
 </ul>
+<h2 id="what-is-aura">What Is Aura </h2>
+<ul>
+<li>Aura, energy field, human energy field, radiance, luminescence, spiritual energy</li>
+<li>Covers electromagnetic particles surrounding the human body</li>
+</ul>
 <h2 id="aura氣場起源">Aura氣場起源 </h2>
 <ul>
 <li>西元前500-700年,印度的奧義書有提到五層能量場,但是沒有提到光</li>
 <li>西元前320年,葛洪(號抱朴子),第一次以文獻方式紀錄人體周圍的光環及光</li>
+</ul>
+<h2 id="origin-of-aura">Origin of Aura </h2>
+<ul>
+<li>Around 500–700 BC, the Indian Upanishads mentioned five layers of the energy field, but did not mention light</li>
+<li>Around 320 BC, Ge Hong (styled Baopuzi) was the first to document the halo and light around the human body in written form</li>
 </ul>
 <h2 id="aura氣場七層">Aura氣場七層 </h2>
 <ul>
@@ -73,7 +102,17 @@
 <li>第六層: 心智外層(Higher mental),連結宇宙智慧</li>
 <li>第七層: 靈性(Spirtual),吸收宇宙能量供生命使用</li>
 </ul>
-<h2 id="aura氣場圖">Aura氣場圖 </h2>
+<h2 id="seven-layers-of-the-aura">Seven Layers of the Aura </h2>
+<ul>
+<li>First Layer: Physical — related to physical health; commonly seen techniques such as Kirlian photography, Kirlian, and GDV belong to this layer</li>
+<li>Second Layer: Etheric — consists of two sublayers; this layer represents the eternal self, storing reincarnation, memories, and the subconscious, and carries the soul at physical death. What people commonly refer to as ghosts is essentially this layer.</li>
+<li>Third Layer: Vital — absorbs energy and is the only layer that also emits energy outward.</li>
+<li>Fourth Layer: Astral — oval-shaped, also known as the “auric egg,” interacts with surrounding energies.</li>
+<li>Fifth Layer: Lower Mental — associated with intellectual level.</li>
+<li>Sixth Layer: Higher Mental — connects to universal wisdom.</li>
+<li>Seventh Layer: Spiritual — absorbs cosmic energy for sustaining life.</li>
+</ul>
+<h2 id="aura氣場圖-aura-diagram">Aura氣場圖 (Aura Diagram) </h2>
 <p><img src="./aura.jpg" alt="Aura氣場圖"></p>
 
       </div>
