--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <li>IG 帳號 <a href="https://www.instagram.com/taomuru/">taomuru</a></li>
 <li>Threads 帳號 <a href="https://www.threads.com/@taomuru">@taomuru</a></li>
 <li>Youtube 頻道 <a href="https://www.youtube.com/@thaolaxd">https://www.youtube.com/@thaolaxd</a></li>
+<li>Telegram @lightaurastudio</li>
 </ul>
 <h2 id="服務方式">服務方式 </h2>
 <ul>
