--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <li>Threads 帳號 <a href="https://www.threads.com/@taomuru">@taomuru</a></li>
 <li>Youtube 頻道 <a href="https://www.youtube.com/@thaolaxd">https://www.youtube.com/@thaolaxd</a></li>
 <li>Telegram @lightaurastudio</li>
+<li>Book Aura Analysis Session <a href="https://calendly.com/taomuru/new-meeting">https://calendly.com/taomuru/new-meeting</a></li>
 </ul>
 <h2 id="服務方式">服務方式 </h2>
 <ul>
