--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 <li>提供Aura基礎解讀報告一份(可指定報告的語文,例如英文,中文,等等)</li>
 <li>提供一對一諮詢(額外收費)</li>
 <li>不提供健康問題諮詢,不提供過世親人通靈</li>
-<li>支援Paypal付款. <a href="https://www.paypal.com/ncp/payment/QQSPYKD6WHUUC">一次性諮詢費用</a></li>
+<li>支援Paypal付款.</li>
+<li><a href="https://www.paypal.com/ncp/payment/QQSPYKD6WHUUC">透過Paypay支付一次性氣場分析費用</a></li>
 <li>需要提供一張全身照片, 並參考下方照片,注意人像比例跟姿勢, 頭頂上方空間佔據30%, 人佔據照片高度的20%, 腳底到最下方的空間佔據30%, 掌心向前, 背景最好是淡色的牆壁, 最好是短袖短褲<br>
 <img src="./aura-body.jpg" alt="氣場拍照姿勢"></li>
 <li>Google評價 <a href="https://g.page/r/CQfz6lbreLYLEBM/review">https://g.page/r/CQfz6lbreLYLEBM/review</a></li>
@@ -50,8 +51,8 @@
 <li>Includes one basic Aura reading report (you may specify the report language, e.g., English, Chinese, etc.)</li>
 <li>Provides one-on-one consultation (additional fee)</li>
 <li>No consultation for health issues, no communication with deceased relatives</li>
-<li>Supports PayPal payment. <a href="https://www.paypal.com/ncp/payment/VZGHCNNMF3RME">One-time consultation fee<br>
-</a></li>
+<li>Supports PayPal payment.</li>
+<li><a href="https://www.paypal.com/ncp/payment/VZGHCNNMF3RME">Pay the one-time Aura reading fee via PayPay</a></li>
 <li>A full-body photo is required. Please refer to the sample photo above and pay attention to body proportion and posture: 30% empty space above the head, the person occupies 20% of the photo height, 30% empty space from the feet to the bottom, palms facing forward, preferably with a light-colored wall background, and ideally wearing short sleeves and shorts.</li>
 </ul>
 <h2 id="訂閱服務">訂閱服務 </h2>
