--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 </ul>
 <h2 id="服務方式">服務方式 </h2>
 <ul>
-<li>線上諮詢,可文字,語音或視訊(Line, Zoom, Google Meet, WeChat, Whatsapp, Telegram, Email)</li>
-<li>提供Aura基礎解讀報告一份(可指定報告的語文,例如英文,中文,等等)</li>
+<li>線上諮詢,可文字,語音或視訊</li>
+<li>提供 Aura 基礎解讀報告一份(可指定報告的語文,例如英文,中文,等等)</li>
 <li>提供一對一諮詢(額外收費)</li>
 <li>不提供健康問題諮詢,不提供過世親人通靈</li>
-<li>支援Paypal付款.</li>
-<li><a href="https://www.paypal.com/ncp/payment/QQSPYKD6WHUUC">透過Paypay支付一次性氣場分析費用</a></li>
+<li>支援 Paypal 付款.</li>
+<li><a href="https://www.paypal.com/ncp/payment/QQSPYKD6WHUUC">透過 Paypay 支付一次性氣場解讀費用</a></li>
 <li>需要提供一張全身照片, 並參考下方照片,注意人像比例跟姿勢, 頭頂上方空間佔據30%, 人佔據照片高度的20%, 腳底到最下方的空間佔據30%, 掌心向前, 背景最好是淡色的牆壁, 最好是短袖短褲<br>
 <img src="./aura-body.jpg" alt="氣場拍照姿勢"></li>
 <li>Google評價 <a href="https://g.page/r/CQfz6lbreLYLEBM/review">https://g.page/r/CQfz6lbreLYLEBM/review</a></li>
@@ -57,15 +57,15 @@
 </ul>
 <h2 id="訂閱服務">訂閱服務 </h2>
 <ul>
-<li><a href="./subscription-personal.html">個人每月20次氣場分析</a></li>
-<li><a href="./subscription-family.html">家庭共享每月20次氣場分析</a></li>
-<li><a href="./subscription-friends.html">好友共享每月20次氣場分析</a></li>
+<li><a href="./subscription-personal.html">個人每月20次氣場解讀</a></li>
+<li><a href="./subscription-family.html">家庭共享每月20次氣場解讀</a></li>
+<li><a href="./subscription-friends.html">好友共享每月20次氣場解讀</a></li>
 </ul>
 <h2 id="subscription-plans">Subscription Plans </h2>
 <ul>
-<li><a href="./subscription-personal.html">Personal: 20 Aura Analyses per Month</a></li>
-<li><a href="./subscription-family.html">Family Shared: 20 Aura Analyses per Month</a></li>
-<li><a href="./subscription-friends.html">Friends Shared: 20 Aura Analyses per Month</a></li>
+<li><a href="./subscription-personal.html">Personal: 20 Aura Reading per Month</a></li>
+<li><a href="./subscription-family.html">Family Shared: 20 Aura Reading per Month</a></li>
+<li><a href="./subscription-friends.html">Friends Shared: 20 Aura Reading per Month</a></li>
 </ul>
 <h2 id="關於我">關於我 </h2>
 <ul>
