--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
 </ul>
 <h2 id="訂閱服務">訂閱服務 </h2>
 <ul>
-<li><a href="./subscription-personal.html">個人每月20次氣場解讀</a></li>
-<li><a href="./subscription-family.html">家庭共享每月20次氣場解讀</a></li>
-<li><a href="./subscription-friends.html">好友共享每月20次氣場解讀</a></li>
+<li><a href="./subscription-personal.html">個人 Aura Reading 月訂閱</a></li>
+<li><a href="./subscription-family.html">家庭 Aura Reading 月訂閱（最多 3 人）</a></li>
+<li><a href="./subscription-friends.html">朋友分享 Aura Reading 月訂閱（2 人方案）</a></li>
 </ul>
 <h2 id="subscription-plans">Subscription Plans </h2>
 <ul>
-<li><a href="./subscription-personal.html">Personal: 20 Aura Reading per Month</a></li>
-<li><a href="./subscription-family.html">Family Shared: 20 Aura Reading per Month</a></li>
-<li><a href="./subscription-friends.html">Friends Shared: 20 Aura Reading per Month</a></li>
+<li><a href="./subscription-personal.html">Individual Aura Reading Monthly Plan</a></li>
+<li><a href="./subscription-family.html">Family Aura Reading Monthly Plan (Up to 3 Members)</a></li>
+<li><a href="./subscription-friends.html">Friends Share Aura Reading Monthly Plan (2-Person Plan)</a></li>
 </ul>
 <h2 id="關於我">關於我 </h2>
 <ul>
