--- a/subscription-family.html
+++ b/subscription-family.html
@@ -24,46 +24,16 @@
     
       <div class="crossnote markdown-preview  ">
       
-<h2 id="aura-家庭洞察月訂閱--每月-20-次分析方案"><strong>Aura 家庭洞察月訂閱 – 每月 20 次分析方案</strong> </h2>
-<p>專為個人與家庭設計的 Aura 能量洞察訂閱服務，協助你們在整個月中保持能量清晰度與靈性覺察。</p>
-<p>本方案提供 <strong>每月 20 次 Aura 分析</strong>，可由家庭成員共同使用。<br>
-每次分析都包含：</p>
+<h2 id="家庭-aura-reading-月訂閱最多-3-人"><strong>家庭 Aura Reading 月訂閱（最多 3 人）</strong> </h2>
+<p>提供最多 3 位家庭成員，每人每月 1 次 Aura Reading，並含家庭能量整合建議與家庭群組文字諮詢（每週回覆 1–2 次）。適合希望了解家庭整體能量狀態的家庭。</p>
 <ul>
-<li>Aura 能量圖</li>
-<li>個人化 Aura 分析文字報告</li>
-</ul>
-<p>分析不會即時傳送，因為每次解析需要花費時間，確保準確與深度。</p>
-<p>你也可以在整個月中隨時提出個別問題。我會依照你的問題進行 Aura 分析，並透過 <strong>Email</strong> 傳送 aura 圖與文字說明。</p>
-<p><strong>Aura 家庭洞察月訂閱 – 每月 20 次</strong><br>
-✔ 家庭共用<br>
-✔ 20 次 Aura 照片分析<br>
-✔ 20 份能量報告<br>
-✔ 不限次數提問式 Aura 解析<br>
-✔ Email 傳送<br>
-✔ 非即時，但深度解析</p>
-<ul>
-<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-1GT743292R9991809NEURI2I">Aura 家庭洞察月訂閱 – 每月 20 次分析方案</a></li>
+<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-1GT743292R9991809NEURI2I">家庭 Aura Reading 月訂閱（最多 3 人)</a></li>
 </ul>
 <hr>
-<h2 id="aura-family-insight-membership--20-monthly-scans"><strong>Aura Family Insight Membership – 20 Monthly Scans</strong> </h2>
-<p>A monthly aura analysis membership designed for individuals and families who want continuous energetic clarity and personalized guidance.</p>
-<p>This plan allows <strong>up to 20 aura photo submissions per month</strong>, shared among all family members.<br>
-Each submission includes:</p>
+<h2 id="family-aura-reading-monthly-plan-up-to-3-members"><strong>Family Aura Reading Monthly Plan (Up to 3 Members)</strong> </h2>
+<p>Includes one Aura Reading per month for up to three family members, plus a family energy integration summary and group text support (1–2 replies per week). Designed for families seeking collective energy guidance.</p>
 <ul>
-<li>A complete aura visualization</li>
-<li>A personalized written interpretation</li>
-</ul>
-<p>Analyses are <strong>not instant</strong> — each reading takes time and is carefully processed to ensure accuracy and depth.</p>
-<p>You may also submit personal questions anytime during the month. I will create a question-based aura reading and provide both the aura image and a written explanation via <strong>email</strong>.</p>
-<p><strong>Aura Family Insight Membership – 20 scans/month</strong><br>
-✔ Family-shared plan<br>
-✔ 20 aura photo submissions<br>
-✔ 20 personalized reports<br>
-✔ Unlimited question-based aura readings<br>
-✔ Email delivery<br>
-✔ Non-instant but deeply analyzed</p>
-<ul>
-<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-67R16583C3936594SNEURJKI">Subscription - Aura Family Insight Membership – 20 Monthly Scans</a></li>
+<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-67R16583C3936594SNEURJKI">Family Aura Reading Monthly Plan (Up to 3 Members)</a></li>
 </ul>
 <hr>
 
