--- a/subscription-friends.html
+++ b/subscription-friends.html
@@ -24,38 +24,16 @@
     
       <div class="crossnote markdown-preview  ">
       
-<h3 id="aura-好友共享月訂閱"><strong>Aura 好友共享月訂閱</strong> </h3>
-<p>讓你與好友一起探索彼此的能量流動！本方案提供每月 20 次 Aura 分析額度，可供好友間共同使用。只需提供照片，我將為你們產生 Aura 圖與詳細的 Aura 分析報告（非即時，因為需要細緻分析）。<br>
-此外，你或好友也可提出個別問題，我會根據 Aura 狀態提供解讀，並將 Aura 圖與分析報告以 Email 寄送給你。</p>
-<p><strong>內容包含：</strong></p>
+<h3 id="朋友分享-aura-reading-月訂閱2-人方案"><strong>朋友分享 Aura Reading 月訂閱（2 人方案）</strong> </h3>
+<p>提供 2 位朋友共享，每人每月 1 次 Aura Reading，含共同群組提問（每週統一回覆 1–2 次）。適合想一起探索能量的朋友組合。</p>
 <ul>
-<li>✔ 每月 20 次 Aura 圖 + Aura 分析報告</li>
-<li>✔ 好友可共享使用（不限居住地）</li>
-<li>✔ 提供照片即可，不需即時開會</li>
-<li>✔ 可另外提出問題，我提供專屬 Aura 分析</li>
-<li>✔ 所有結果以 Email 寄送</li>
-</ul>
-<p><strong>適合對象：</strong><br>
-好友之間想一起成長、互相了解能量狀態、關心彼此的情緒、靈性與生命方向。</p>
-<ul>
-<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-5P259692CH450731XNEURLHQ">Aura 好友共享月訂閱</a></li>
+<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-5P259692CH450731XNEURLHQ">朋友分享 Aura Reading 月訂閱（2 人方案）</a></li>
 </ul>
 <hr>
-<h3 id="aura-friends-shared-monthly-plan"><strong>Aura Friends Shared Monthly Plan</strong> </h3>
-<p>A shared subscription designed for you and your close friends to discover and understand your energy patterns together. This plan includes <strong>20 Aura analyses per month</strong>, shared among friends. Simply upload your photos, and I will generate your Aura image and provide a detailed Aura analysis report (not real-time, as each analysis takes time and care).</p>
-<p>You and your friends can also submit personal questions. I will analyze your Aura based on each question and send the Aura images and reports to you through email.</p>
-<p><strong>Included in this plan:</strong></p>
+<h3 id="friends-share-aura-reading-monthly-plan-2-person-plan"><strong>Friends Share Aura Reading Monthly Plan (2-Person Plan)</strong> </h3>
+<p>Includes one Aura Reading per month for two friends, with a shared group text channel for questions (1–2 consolidated replies per week). Ideal for friends who want to explore their energy together.</p>
 <ul>
-<li>✔ 20 Aura images + detailed Aura analysis reports per month</li>
-<li>✔ Shareable among friends (no location restrictions)</li>
-<li>✔ Photo-based analysis — no live session required</li>
-<li>✔ Submit individual questions for personalized Aura readings</li>
-<li>✔ All results delivered via email</li>
-</ul>
-<p><strong>Perfect for:</strong><br>
-Friends who want to grow together, understand each other’s emotional and spiritual energy, and maintain deeper connection through Aura insights.</p>
-<ul>
-<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-3M724631HW081202XNEURMAY">Subscription - Aura Friends Shared Monthly Plan</a></li>
+<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-3M724631HW081202XNEURMAY">Friends Share Aura Reading Monthly Plan (2-Person Plan)</a></li>
 </ul>
 <hr>
 
