--- a/subscription-personal.html
+++ b/subscription-personal.html
@@ -24,34 +24,16 @@
     
       <div class="crossnote markdown-preview  ">
       
-<h2 id="aura-深度洞察月訂閱方案個人">Aura 深度洞察月訂閱方案(個人) </h2>
-<p>透過 <strong>Aura 深度洞察月訂閱方案</strong>，你能在整個月中保持能量的清晰度、穩定度與方向感。<br>
-本方案提供 <strong>每月 20 次 Aura 分析</strong>，包含 aura 圖與個人化文字分析（非即時處理，因為每次分析需要時間與精準度）。</p>
-<p>你也可以在任何時間提出個別問題，我會針對你的問題進行 aura 分析，並產生對應的 aura 圖與文字解讀。</p>
-<p>所有分析結果將以 <strong>Email</strong> 方式寄送，或可選擇透過 <strong>線上視訊</strong> 進行講解。</p>
-<p><strong>Aura 深度洞察月訂閱 – 20 次 / 月</strong><br>
-✔ 20 次 Aura 照片分析<br>
-✔ 20 份個人化能量報告<br>
-✔ 不限次數的提問式 Aura 解讀<br>
-✔ 非即時，但保證深入分析</p>
-<p>這項訂閱非常適合希望在生活中持續接收能量洞見、維持情緒平衡與提升靈性覺察的使用者。</p>
+<h2 id="個人-aura-reading-月訂閱">個人 Aura Reading 月訂閱 </h2>
+<p>提供每月 1 次完整 Aura Reading（60 分鐘），含 1 次 30 分鐘追問諮詢與文字提問支援（每週回覆 1–2 次）。適合希望定期了解能量狀態的個人。</p>
 <ul>
-<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-1A242348KM810422RNEURFKA">Aura 深度洞察月訂閱方案(個人)</a></li>
+<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-1A242348KM810422RNEURFKA">個人 Aura Reading 月訂閱</a></li>
 </ul>
 <hr>
-<h2 id="aura-insight-membership">Aura Insight Membership </h2>
-<p>Gain consistent clarity, energetic awareness, and personalized guidance throughout the month.<br>
-With the <strong>Aura Insight Membership</strong>, you can submit up to <strong>20 photos per month</strong> for detailed aura visualization and written interpretation.</p>
-<p>Each analysis is processed thoughtfully (not instant), ensuring accuracy and personalized insight.</p>
-<p>You may also submit personal questions at any time — simply send your question, and I will provide an aura-based analysis along with an aura scan related to your current state.</p>
-<p><strong>Aura Insight Membership – 20 scans/month</strong><br>
-✔ 20 aura photo submissions<br>
-✔ 20 personalized energy reports<br>
-✔ Unlimited question-based aura readings<br>
-✔ Delivered via email<br>
-✔ Non-instant but deeply analyzed for accuracy</p>
+<h2 id="individual-aura-reading-monthly-plan">Individual Aura Reading Monthly Plan </h2>
+<p>Includes one full Aura Reading per month (60 minutes), one 30-minute follow-up consultation, and text support (1–2 replies per week). Ideal for individuals who want regular energy insights.</p>
 <ul>
-<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-9327408615231862CNEURGOI">Subscription - Aura Insight Membership</a></li>
+<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-9327408615231862CNEURGOI">Individual Aura Reading Monthly Plan</a></li>
 </ul>
 <hr>
 
