--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <li>提供 Aura 基礎解讀報告一份(可指定報告的語文,例如英文,中文,等等)</li>
 <li>提供一對一諮詢(額外收費)</li>
 <li>不提供健康問題諮詢,不提供過世親人通靈</li>
-<li><a href="https://www.paypal.com/ncp/payment/QQSPYKD6WHUUC">透過 Paypay 支付一次性氣場解讀費用</a></li>
+<li><a href="https://www.paypal.com/ncp/payment/5M7YTG2PM4HCL">透過 Paypay 支付一次性氣場解讀費用</a></li>
 <li>需要提供一張全身照片, 並參考下方照片,注意人像比例跟姿勢, 頭頂上方空間佔據30%, 人佔據照片高度的20%, 腳底到最下方的空間佔據30%, 掌心向前, 背景最好是淡色的牆壁, 最好是短袖短褲<br>
 <img src="./aura-body.jpg" alt="氣場拍照姿勢"></li>
 <li>Google評價 <a href="https://g.page/r/CQfz6lbreLYLEBM/review">https://g.page/r/CQfz6lbreLYLEBM/review</a></li>
@@ -55,15 +55,15 @@
 </ul>
 <h2 id="訂閱服務">訂閱服務 </h2>
 <ul>
-<li><a href="./subscription-personal.html">個人 Aura Reading 月訂閱</a></li>
-<li><a href="./subscription-family.html">家庭 Aura Reading 月訂閱（最多 3 人）</a></li>
-<li><a href="./subscription-friends.html">朋友分享 Aura Reading 月訂閱（2 人方案）</a></li>
+<li><a href="./subscription-personal.html">個人 Aura Reading 月訂閱</a> 提供每月 1 次完整 Aura Reading（60 分鐘），含 1 次 30 分鐘追問諮詢與文字提問支援（每週回覆 1–2 次）。適合希望定期了解能量狀態的個人。</li>
+<li><a href="./subscription-family.html">家庭 Aura Reading 月訂閱（最多 3 人）</a> 提供最多 3 位家庭成員，每人每月 1 次 Aura Reading，並含家庭能量整合建議與家庭群組文字諮詢（每週回覆 1–2 次）。適合希望了解家庭整體能量狀態的家庭。</li>
+<li><a href="./subscription-friends.html">朋友分享 Aura Reading 月訂閱（2 人方案）</a> 提供 2 位朋友共享，每人每月 1 次 Aura Reading，含共同群組提問（每週統一回覆 1–2 次）。適合想一起探索能量的朋友組合。</li>
 </ul>
 <h2 id="subscription-plans">Subscription Plans </h2>
 <ul>
-<li><a href="./subscription-personal.html">Individual Aura Reading Monthly Plan</a></li>
-<li><a href="./subscription-family.html">Family Aura Reading Monthly Plan (Up to 3 Members)</a></li>
-<li><a href="./subscription-friends.html">Friends Share Aura Reading Monthly Plan (2-Person Plan)</a></li>
+<li><a href="./subscription-personal.html">Individual Aura Reading Monthly Plan</a> Includes one full Aura Reading per month (60 minutes), one 30-minute follow-up consultation, and text support (1–2 replies per week). Ideal for individuals who want regular energy insights.</li>
+<li><a href="./subscription-family.html">Family Aura Reading Monthly Plan (Up to 3 Members)</a> Includes one Aura Reading per month for up to three family members, plus a family energy integration summary and group text support (1–2 replies per week). Designed for families seeking collective energy guidance.</li>
+<li><a href="./subscription-friends.html">Friends Share Aura Reading Monthly Plan (2-Person Plan)</a> Includes one Aura Reading per month for two friends, with a shared group text channel for questions (1–2 consolidated replies per week). Ideal for friends who want to explore their energy together.</li>
 </ul>
 <h2 id="關於我">關於我 </h2>
 <ul>
