--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 <li>Sixth Layer: Higher Mental — connects to universal wisdom.</li>
 <li>Seventh Layer: Spiritual — absorbs cosmic energy for sustaining life.</li>
 </ul>
-<h2 id="aura氣場圖-aura-diagram">Aura氣場圖 (Aura Diagram) </h2>
-<p><img src="./aura.jpg" alt="Aura氣場圖"></p>
+<h2 id="aura氣場圖跟解讀報告-aura-diagram--aura-reading">Aura氣場圖跟解讀報告 (Aura Diagram &amp; Aura Reading) </h2>
+<p><img src="./sample.jpg" alt="Aura氣場圖"></p>
 
       </div>
       
