--- a/index.html
+++ b/index.html
@@ -24,52 +24,82 @@
     
       <div class="crossnote markdown-preview  ">
       
-<h1 id="為何你需要做氣場解讀">為何你需要做氣場解讀? </h1>
-<p>我替許多人做過氣場解讀。有人覺得非常準、對他們幫助很大；也有人感受不深，或只覺得似乎有些幫助。</p>
-<p>多數人看待氣場解讀的方式，往往與看醫生相同：<br>
-如果身體有感冒、流感或糖尿病，就期望看醫生、吃藥後，症狀能立刻改善。因此他們也會期待氣場解讀能快速解決問題，最好能在一兩週內見效。</p>
-<p>但如果你從事能量療癒，你會知道氣場（或稱人體能量場）的運作方式。你明白療癒師做的是協助調整對方的能量場，讓脈輪恢復流動、解除阻塞。一旦脈輪順暢，只要個案願意保持積極正向的意願，就有機會自我修復。</p>
-<p>能量療癒是一種 <strong>長期、以自我療癒為核心</strong> 的方式。會主動尋求療癒的人，通常具有較高的自我覺察，心態也較為開放，願意接觸新的觀念。</p>
+<h1 id="氣場解讀">氣場解讀 </h1>
+<p>我替許多人做過氣場解讀。有人覺得非常準確、非常受用，也有人感受較少，或覺得似乎有一些幫助。</p>
+<p>許多人看待氣場解讀的方式，就像看醫生一樣：<br>
+身體生病時，例如感冒、糖尿病、流感，他們期待付錢看醫生、吃藥後就能改善。因此，他們也希望氣場解讀能在短時間內解決人生問題，最好是一到兩週內就見效。</p>
+<p>但氣場解讀本質上是一種 <strong>自我療癒的方式</strong>。<br>
+它會將你的身、心、靈完整地呈現出來，包含你知道或不知道的問題、願意或不願意面對的議題，以及你想解決卻卡住的困境。透過氣場解讀，你會得到一份清楚的「自我清單」，讓你知道該如何看見、理解並面對自己。</p>
+<p>你也可以定期進行氣場解讀，作為協助自己、家人與朋友進行自我療癒的方式。</p>
 <hr>
-<h2 id="有人問我氣場解讀到底能提供什麼幫助">有人問我：氣場解讀到底能提供什麼幫助？ </h2>
+<h2 id="有人會問氣場解讀到底能帶來什麼幫助">有人會問：氣場解讀到底能帶來什麼幫助？ </h2>
 <p>我們都知道生活環境會影響健康：<br>
 住在發電廠或飛機航道旁對身體不好；<br>
-住在公園附近、家裡通風採光良好會讓人感覺舒適。<br>
-同樣地，吵架、壓力、責罵會讓人心情低落、疲憊；<br>
-旅遊、聽音樂、看喜劇會讓人開心放鬆；<br>
-睡前看太多 3C 容易焦慮、難以入睡。</p>
-<p>這些因素都可能讓人「生病」，但呈現方式不一定是細菌或病毒造成的身體疾病，有時則是心理層面的不適。當心理生病時，我們會找心理醫師，但若看診與用藥後仍沒有改善，那該怎麼辦？</p>
-<p>這時，氣場解讀就能派上用場。</p>
-<p>氣場解讀能協助處理那些 <strong>你感覺得到，但並非細菌或病毒造成的心理與能量層面的問題</strong>，例如：<br>
-憂鬱、空虛、寂寞、恐慌、焦慮、心情低落、迷惘、人生停滯、工作不順、親子議題、夫妻衝突、人際緊張、長輩壓力、愛情友情困境等。</p>
-<p>氣場是你的「人體能量場」，其中蘊含你的一切：包含過去世的影響、當下的狀態，以及未來的可能性。<br>
-氣場解讀是一種身心靈的整體分析，協助你看清問題、找到方向。</p>
-<p>最重要的是：<br>
-氣場解讀就像一份 <strong>長期幫助你自我成長、自我療癒的計畫書</strong>。<br>
-只要願意依循建議，相信自己的改變能力，許多困擾你多年的問題，其實都能逐步化解。</p>
+住在公園附近、家裡通風採光好，心情自然較佳。</p>
+<p>情緒與日常事件也會產生強烈影響：<br>
+爭吵、工作或學業壓力、被責備，會造成心情低落、憂鬱或疲倦；<br>
+旅行、幽默、遊戲、音樂能讓人快樂放鬆；<br>
+睡前滑 3C 容易焦慮、失眠。</p>
+<p>這些都可能讓人「生病」，但有些表現在身體，有些則反映在心理。</p>
+<p>當心理出現問題時，我們會尋求心理醫師；但如果經過諮商與用藥後仍沒有改善，那該怎麼辦？</p>
 <hr>
-<h1 id="why-do-you-need-an-aura-reading">Why do you need an aura reading? </h1>
-<p>I have done aura readings for many people. Some feel the readings are very accurate and helpful; some do not feel much, while others sense that they help to a certain degree.</p>
-<p>Many people approach aura readings the same way they visit a doctor.<br>
-When they catch a cold, have the flu, or deal with chronic illnesses like diabetes, they expect that after seeing a doctor and taking medication, their symptoms will improve quickly.<br>
-So they also expect an aura reading to solve their problems within a short time—often within one or two weeks.</p>
-<p>However, if you work in energy healing, you know how the aura—also called the human energy field—actually functions. You understand that healing work involves adjusting someone’s energy field, unblocking their chakras, and restoring energetic flow. Once the chakras operate smoothly, the person has the ability to self-heal, as long as they maintain a positive and open attitude.</p>
-<p>Energy healing is <strong>a long-term, self-healing process</strong>. People who seek help from healers often have higher levels of self-awareness and are more open to new perspectives.</p>
-<h2 id="some-people-ask-me-how-can-an-aura-reading-help">Some people ask me: How can an aura reading help? </h2>
-<p>We all know that our living environment affects our well-being.<br>
-Living near a power plant or flight path harms the body;<br>
-living near a park with good ventilation and sunlight makes us feel better.<br>
-Likewise, arguments, pressure, and criticism can lower our mood and cause fatigue;<br>
-traveling, humor, gaming, and music can uplift us.<br>
-Using electronic devices before bed can cause anxiety and poor sleep.</p>
-<p>These experiences can also make us “sick,” but the effects may not show as bacterial or viral illnesses—they often manifest emotionally or mentally. When our mind suffers, we may seek a psychologist. But if therapy and medication still do not bring improvement, what else can we do?</p>
-<p>This is where an aura reading can help.</p>
-<p>Aura readings address issues that <strong>you can feel but are not caused by germs or physical illness</strong>, such as:<br>
-depression, emptiness, loneliness, panic, anxiety, low mood, life confusion, stagnation, career obstacles, family conflict, relationship tension, pressure from elders, or struggles in love and friendships.</p>
-<p>Your aura is your <strong>energy field</strong>, containing everything about you: past-life influences, your present condition, and potential future directions.<br>
-An aura reading is a holistic mind-body-spirit analysis that helps you see your challenges more clearly and discover answers.</p>
-<p>Most importantly, an aura reading serves as a <strong>long-term self-growth and self-healing roadmap</strong>.<br>
-By following the insights and recommendations, and believing in your ability to change, many long-standing issues can gradually resolve.</p>
+<h2 id="這時氣場解讀能提供另一條途徑">這時，氣場解讀能提供另一條途徑。 </h2>
+<p>氣場解讀能處理那些 <strong>你感覺得到、卻不是由細菌或病毒引起的問題</strong>，例如：</p>
+<ul>
+<li>憂鬱、空虛、寂寞</li>
+<li>恐慌、焦慮、心情低落</li>
+<li>迷惘、人生停滯、工作不順</li>
+<li>家庭不和、親子問題、夫妻吵架</li>
+<li>人際緊張、長輩施壓</li>
+<li>愛情、友情、人際關係的困境</li>
+<li>不知道人生方向、找不到答案</li>
+</ul>
+<p>氣場是你的人體能量場，當中包含你的全部：<br>
+你的過去世印記、目前的狀態，以及未來的可能性。</p>
+<p>氣場解讀是一種 <strong>身心靈的深度分析</strong>，協助你看到真正的問題，找到那些你一直找不到的答案。</p>
+<p>最重要的是：<br>
+氣場解讀就像一份 <strong>長期陪伴你的自我療癒計畫書</strong>。<br>
+只要你願意相信並採取行動，就能逐步帶來改變。許多多年困擾你的問題，都可能因此被釐清並得到改善。</p>
+<hr>
+<h1 id="aura-reading">Aura Reading </h1>
+<p>I have done aura readings for many people. Some feel the readings are highly accurate and extremely helpful; others feel little change, while some notice partial improvement.</p>
+<p>Many people approach aura readings with the same mindset they have when visiting a doctor.<br>
+When they get sick—such as with a cold, the flu, or diabetes—they expect that after paying the doctor and taking medication, the symptoms will improve.<br>
+So they hope an aura reading can also solve their life problems quickly, ideally within one or two weeks.</p>
+<p>However, an aura reading is essentially a <strong>self-healing method</strong>.<br>
+It reveals your physical, emotional, and spiritual state in full clarity. It brings to light issues you are aware of or unaware of, problems you want to face or avoid, and obstacles you want to resolve but don’t know how.<br>
+Through the reading, you receive a clear “self-awareness list” that guides you on how to understand and face yourself.</p>
+<p>You can also get aura readings regularly to support your own healing, as well as the healing of your family and friends.</p>
+<hr>
+<h2 id="people-often-ask-what-can-an-aura-reading-really-help-with">People often ask: What can an aura reading really help with? </h2>
+<p>We all know that our environment affects our well-being:<br>
+living near a power plant or a flight path harms the body;<br>
+living near a park with good air and sunlight naturally feels better.</p>
+<p>Emotions and daily experiences also affect us deeply:<br>
+arguments, stress from work or school, and frequent criticism can lead to sadness, depression, or exhaustion;<br>
+travel, humor, games, and music bring joy and relaxation;<br>
+using electronic devices before sleep can cause anxiety and insomnia.</p>
+<p>These experiences can make us “sick”—sometimes physically, sometimes mentally.</p>
+<p>When the mind struggles, we may seek help from a psychologist.<br>
+But if therapy and medication still do not improve the situation, what else can we do?</p>
+<hr>
+<h2 id="this-is-where-aura-readings-offer-a-different-approach">This is where aura readings offer a different approach. </h2>
+<p>Aura readings help with issues that <strong>you can strongly feel, but are not caused by bacteria or viruses</strong>, such as:</p>
+<ul>
+<li>depression, emptiness, loneliness</li>
+<li>panic, anxiety, low mood</li>
+<li>confusion, life stagnation, career blocks</li>
+<li>family conflict, parent-child issues, marital tension</li>
+<li>social difficulties, pressure from elders</li>
+<li>problems in love, friendship, or personal relationships</li>
+<li>uncertainty about life direction</li>
+</ul>
+<p>Your aura is your <strong>energy field</strong>, containing everything about you:<br>
+your past-life influences, your present state, and your future potential.</p>
+<p>Aura reading is a deep mind-body-spirit analysis that helps you see the true roots of your problems and find the answers you have been searching for.</p>
+<p>Most importantly, an aura reading becomes a <strong>long-term self-healing guide</strong>.<br>
+If you are willing to follow the insights and take action, you can support your own transformation. Many long-standing issues may gradually become clearer—and finally begin to resolve.</p>
+<hr>
 <h2 id="聯絡方式">聯絡方式 </h2>
 <ul>
 <li>Line 帳號 @211wegrx</li>
@@ -81,14 +111,25 @@ By following the insights and recommendations, and believing in your ability to 
 </ul>
 <h2 id="服務方式">服務方式 </h2>
 <ul>
-<li>線上諮詢,可文字,語音或視訊</li>
-<li>提供 Aura 基礎解讀報告一份(可指定報告的語文,例如英文,中文,等等)</li>
-<li>提供一對一諮詢(額外收費)</li>
-<li>不提供健康問題諮詢,不提供過世親人通靈</li>
-<li><a href="https://www.paypal.com/ncp/payment/5M7YTG2PM4HCL">透過 Paypay 支付一次性氣場解讀費用</a></li>
-<li>需要提供一張全身照片, 並參考下方照片,注意人像比例跟姿勢, 頭頂上方空間佔據30%, 人佔據照片高度的20%, 腳底到最下方的空間佔據30%, 掌心向前, 背景最好是淡色的牆壁, 最好是短袖短褲<br>
-<img src="./aura-body.jpg" alt="氣場拍照姿勢"></li>
-<li>Google評價 <a href="https://g.page/r/CQfz6lbreLYLEBM/review">https://g.page/r/CQfz6lbreLYLEBM/review</a></li>
+<li>
+<p>線上諮詢,可文字,語音或視訊</p>
+</li>
+<li>
+<p>提供 Aura 基礎解讀報告一份(可指定報告的語文,例如英文,中文,等等)</p>
+</li>
+<li>
+<p>提供一對一諮詢(額外收費)</p>
+</li>
+<li>
+<p>不提供健康問題諮詢,不提供過世親人通靈</p>
+</li>
+<li>
+<p>需要提供一張全身照片, 並參考下方照片,注意人像比例跟姿勢, 頭頂上方空間佔據30%, 人佔據照片高度的20%, 腳底到最下方的空間佔據30%, 掌心向前, 背景最好是淡色的牆壁, 最好是短袖短褲<br>
+<img src="./aura-body.jpg" alt="氣場拍照姿勢"></p>
+</li>
+<li>
+<p>Google評價 <a href="https://g.page/r/CQfz6lbreLYLEBM/review">https://g.page/r/CQfz6lbreLYLEBM/review</a></p>
+</li>
 </ul>
 <h2 id="service-method">Service Method </h2>
 <ul>
@@ -96,17 +137,18 @@ By following the insights and recommendations, and believing in your ability to 
 <li>Includes one basic Aura reading report (you may specify the report language, e.g., English, Chinese, etc.)</li>
 <li>Provides one-on-one consultation (additional fee)</li>
 <li>No consultation for health issues, no communication with deceased relatives</li>
-<li><a href="https://www.paypal.com/ncp/payment/VZGHCNNMF3RME">Pay the one-time Aura reading fee via PayPay</a></li>
 <li>A full-body photo is required. Please refer to the sample photo above and pay attention to body proportion and posture: 30% empty space above the head, the person occupies 20% of the photo height, 30% empty space from the feet to the bottom, palms facing forward, preferably with a light-colored wall background, and ideally wearing short sleeves and shorts.</li>
 </ul>
-<h2 id="訂閱服務">訂閱服務 </h2>
+<h2 id="付款方式-paypal">付款方式 (Paypal) </h2>
 <ul>
+<li><a href="https://www.paypal.com/ncp/payment/5M7YTG2PM4HCL">一次性氣場解讀費用</a></li>
 <li><a href="./subscription-personal.html">個人 Aura Reading 月訂閱</a> 提供每月 1 次完整 Aura Reading（60 分鐘），含 1 次 30 分鐘追問諮詢與文字提問支援（每週回覆 1–2 次）。適合希望定期了解能量狀態的個人。</li>
 <li><a href="./subscription-family.html">家庭 Aura Reading 月訂閱（最多 3 人）</a> 提供最多 3 位家庭成員，每人每月 1 次 Aura Reading，並含家庭能量整合建議與家庭群組文字諮詢（每週回覆 1–2 次）。適合希望了解家庭整體能量狀態的家庭。</li>
 <li><a href="./subscription-friends.html">朋友分享 Aura Reading 月訂閱（2 人方案）</a> 提供 2 位朋友共享，每人每月 1 次 Aura Reading，含共同群組提問（每週統一回覆 1–2 次）。適合想一起探索能量的朋友組合。</li>
 </ul>
-<h2 id="subscription-plans">Subscription Plans </h2>
+<h2 id="payment-paypal">Payment (Paypal) </h2>
 <ul>
+<li><a href="https://www.paypal.com/ncp/payment/VZGHCNNMF3RME">Pay the one-time Aura reading fee</a></li>
 <li><a href="./subscription-personal.html">Individual Aura Reading Monthly Plan</a> Includes one full Aura Reading per month (60 minutes), one 30-minute follow-up consultation, and text support (1–2 replies per week). Ideal for individuals who want regular energy insights.</li>
 <li><a href="./subscription-family.html">Family Aura Reading Monthly Plan (Up to 3 Members)</a> Includes one Aura Reading per month for up to three family members, plus a family energy integration summary and group text support (1–2 replies per week). Designed for families seeking collective energy guidance.</li>
 <li><a href="./subscription-friends.html">Friends Share Aura Reading Monthly Plan (2-Person Plan)</a> Includes one Aura Reading per month for two friends, with a shared group text channel for questions (1–2 consolidated replies per week). Ideal for friends who want to explore their energy together.</li>
