--- a/index-en.html
+++ b/index-en.html
@@ -28,14 +28,6 @@
 <h1 id="why-do-you-need-an-aura-reading">Why do you need an aura reading? </h1>
 <p>An aura reading reveals your physical, emotional, and spiritual state in full clarity. It brings to light issues you are aware of or unaware of, problems you want to face or avoid, and obstacles you want to resolve but don’t know how.<br>
 Through the reading, you receive a clear “self-awareness list” that guides you on how to understand and face yourself.</p>
-<p>Aura readings help with issues such as:</p>
-<ul>
-<li>confusion, life stagnation, career blocks</li>
-<li>family conflict, parent-child issues, marital tension</li>
-<li>social difficulties, pressure from elders</li>
-<li>problems in love, friendship, or personal relationships</li>
-<li>uncertainty about life direction</li>
-</ul>
 <p>Your aura is your <strong>energy field</strong>, containing everything about you:<br>
 your past-life influences, your present state, and your future potential.</p>
 <p>Aura reading is a deep mind-body-spirit analysis that helps you see the true roots of your problems and find the answers you have been searching for.</p>
@@ -59,10 +51,10 @@ your past-life influences, your present state, and your future potential.</p>
 </ul>
 <h2 id="payment-paypal">Payment (Paypal) </h2>
 <ul>
-<li><a href="https://www.paypal.com/ncp/payment/VZGHCNNMF3RME">Pay the one-time Aura reading fee</a></li>
-<li><a href="./subscription-personal.html">Individual Aura Reading Monthly Plan</a> Includes one full Aura Reading per month (60 minutes), one 30-minute follow-up consultation, and text support (1–2 replies per week). Ideal for individuals who want regular energy insights.</li>
-<li><a href="./subscription-family.html">Family Aura Reading Monthly Plan (Up to 3 Members)</a> Includes one Aura Reading per month for up to three family members, plus a family energy integration summary and group text support (1–2 replies per week). Designed for families seeking collective energy guidance.</li>
-<li><a href="./subscription-friends.html">Friends Share Aura Reading Monthly Plan (2-Person Plan)</a> Includes one Aura Reading per month for two friends, with a shared group text channel for questions (1–2 consolidated replies per week). Ideal for friends who want to explore their energy together.</li>
+<li><a href="https://www.paypal.com/ncp/payment/5M7YTG2PM4HCL">One-time Aura Reading</a></li>
+<li><a href="./subscription-personal.html">Personal Aura Reading Monthly Subscription</a>: Unlimited questions per month with one response per week. Ideal for individuals who want to regularly understand their energy state.</li>
+<li><a href="./subscription-family.html">Family Aura Reading Monthly Subscription (up to 3 people)</a>: Shared access for family members, with unlimited questions per month and one response per week. Ideal for families who want insight into their overall family energy.</li>
+<li><a href="./subscription-friends.html">Friends Aura Reading Monthly Subscription (2-person plan)</a>: Shared by two friends, with unlimited questions per month and one response per week. Ideal for friends who want to explore energy together.</li>
 </ul>
 <h2 id="collaboration">Collaboration </h2>
 <ul>
@@ -73,21 +65,6 @@ your past-life influences, your present state, and your future potential.</p>
 <ul>
 <li>Aura, energy field, human energy field, radiance, luminescence, spiritual energy</li>
 <li>Covers electromagnetic particles surrounding the human body</li>
-</ul>
-<h2 id="origin-of-aura">Origin of Aura </h2>
-<ul>
-<li>Around 500–700 BC, the Indian Upanishads mentioned five layers of the energy field, but did not mention light</li>
-<li>Around 320 BC, Ge Hong (styled Baopuzi) was the first to document the halo and light around the human body in written form</li>
-</ul>
-<h2 id="seven-layers-of-the-aura">Seven Layers of the Aura </h2>
-<ul>
-<li>First Layer: Physical — related to physical health; commonly seen techniques such as Kirlian photography, Kirlian, and GDV belong to this layer</li>
-<li>Second Layer: Etheric — consists of two sublayers; this layer represents the eternal self, storing reincarnation, memories, and the subconscious, and carries the soul at physical death. What people commonly refer to as ghosts is essentially this layer.</li>
-<li>Third Layer: Vital — absorbs energy and is the only layer that also emits energy outward.</li>
-<li>Fourth Layer: Astral — oval-shaped, also known as the “auric egg,” interacts with surrounding energies.</li>
-<li>Fifth Layer: Lower Mental — associated with intellectual level.</li>
-<li>Sixth Layer: Higher Mental — connects to universal wisdom.</li>
-<li>Seventh Layer: Spiritual — absorbs cosmic energy for sustaining life.</li>
 </ul>
 <h2 id="aura-diagram">Aura Diagram </h2>
 <p><img src="./aura.jpg" alt="Aura"></p>
