--- a/subscription-family.html
+++ b/subscription-family.html
@@ -25,13 +25,13 @@
       <div class="crossnote markdown-preview  ">
       
 <h2 id="家庭-aura-reading-月訂閱最多-3-人"><strong>家庭 Aura Reading 月訂閱（最多 3 人）</strong> </h2>
-<p>提供最多 3 位家庭成員，每人每月 1 次 Aura Reading，並含家庭能量整合建議與家庭群組文字諮詢（每週回覆 1–2 次）。適合希望了解家庭整體能量狀態的家庭。</p>
+<p>提供家庭成員共同使用，每月無限次數提問，每週回覆一次。適合希望了解家庭整體能量狀態的家庭。</p>
 <ul>
 <li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-1GT743292R9991809NEURI2I">家庭 Aura Reading 月訂閱（最多 3 人)</a></li>
 </ul>
 <hr>
 <h2 id="family-aura-reading-monthly-plan-up-to-3-members"><strong>Family Aura Reading Monthly Plan (Up to 3 Members)</strong> </h2>
-<p>Includes one Aura Reading per month for up to three family members, plus a family energy integration summary and group text support (1–2 replies per week). Designed for families seeking collective energy guidance.</p>
+<p>Shared access for family members, with unlimited questions per month and one response per week. Ideal for families who want insight into their overall family energy.</p>
 <ul>
 <li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-67R16583C3936594SNEURJKI">Family Aura Reading Monthly Plan (Up to 3 Members)</a></li>
 </ul>
