--- a/subscription-friends.html
+++ b/subscription-friends.html
@@ -25,13 +25,13 @@
       <div class="crossnote markdown-preview  ">
       
 <h3 id="朋友分享-aura-reading-月訂閱2-人方案"><strong>朋友分享 Aura Reading 月訂閱（2 人方案）</strong> </h3>
-<p>提供 2 位朋友共享，每人每月 1 次 Aura Reading，含共同群組提問（每週統一回覆 1–2 次）。適合想一起探索能量的朋友組合。</p>
+<p>提供 2 位朋友共享，每月無限次數提問，每週回覆一次。適合想一起探索能量的朋友組合。</p>
 <ul>
 <li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-5P259692CH450731XNEURLHQ">朋友分享 Aura Reading 月訂閱（2 人方案）</a></li>
 </ul>
 <hr>
 <h3 id="friends-share-aura-reading-monthly-plan-2-person-plan"><strong>Friends Share Aura Reading Monthly Plan (2-Person Plan)</strong> </h3>
-<p>Includes one Aura Reading per month for two friends, with a shared group text channel for questions (1–2 consolidated replies per week). Ideal for friends who want to explore their energy together.</p>
+<p>Shared by two friends, with unlimited questions per month and one response per week. Ideal for friends who want to explore energy together.</p>
 <ul>
 <li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-3M724631HW081202XNEURMAY">Friends Share Aura Reading Monthly Plan (2-Person Plan)</a></li>
 </ul>
