--- a/index.html
+++ b/index.html
@@ -27,14 +27,6 @@
 <p><strong>繁體中文</strong> | <a href="./index-en.html">English</a></p>
 <h1 id="為何你需要做氣場解讀">為何你需要做氣場解讀? </h1>
 <p>氣場解讀會將你的身、心、靈完整地呈現出來，包含你知道或不知道的問題、願意或不願意面對的議題，以及你想解決卻卡住的困境。透過氣場解讀，你會得到一份清楚的「自我清單」，讓你知道該如何看見、理解並面對自己。</p>
-<p>氣場解讀可以應用在這些領域：</p>
-<ul>
-<li>迷惘、人生停滯、工作不順</li>
-<li>家庭不和、親子問題、夫妻吵架</li>
-<li>人際緊張、長輩施壓</li>
-<li>愛情、友情、人際關係的困境</li>
-<li>不知道人生方向、找不到答案</li>
-</ul>
 <p>氣場是你的人體能量場，當中包含你的全部：<br>
 你的過去世印記、目前的狀態，以及未來的可能性。</p>
 <h2>氣場解讀是一種 <strong>身心靈的深度分析</strong>，協助你看到真正的問題，找到那些你一直找不到的答案。</h2>
@@ -72,9 +64,9 @@
 <h2 id="付款方式-paypal">付款方式 (Paypal) </h2>
 <ul>
 <li><a href="https://www.paypal.com/ncp/payment/5M7YTG2PM4HCL">一次性氣場解讀</a></li>
-<li><a href="./subscription-personal.html">個人 Aura Reading 月訂閱</a> 提供每月 1 次完整 Aura Reading（60 分鐘），含 1 次 30 分鐘追問諮詢與文字提問支援（每週回覆 1–2 次）。適合希望定期了解能量狀態的個人。</li>
-<li><a href="./subscription-family.html">家庭 Aura Reading 月訂閱（最多 3 人）</a> 提供最多 3 位家庭成員，每人每月 1 次 Aura Reading，並含家庭能量整合建議與家庭群組文字諮詢（每週回覆 1–2 次）。適合希望了解家庭整體能量狀態的家庭。</li>
-<li><a href="./subscription-friends.html">朋友分享 Aura Reading 月訂閱（2 人方案）</a> 提供 2 位朋友共享，每人每月 1 次 Aura Reading，含共同群組提問（每週統一回覆 1–2 次）。適合想一起探索能量的朋友組合。</li>
+<li><a href="./subscription-personal.html">個人 Aura Reading 月訂閱</a> 提供每月無限次數提問，每週回覆一次。適合希望定期了解能量狀態的個人。</li>
+<li><a href="./subscription-family.html">家庭 Aura Reading 月訂閱（最多 3 人）</a> 提供家庭成員共同使用，每月無限次數提問，每週回覆一次。適合希望了解家庭整體能量狀態的家庭。</li>
+<li><a href="./subscription-friends.html">朋友分享 Aura Reading 月訂閱（2 人方案）</a> 提供 2 位朋友共享，每月無限次數提問，每週回覆一次。適合想一起探索能量的朋友組合。</li>
 </ul>
 <h2 id="合作">合作 </h2>
 <ul>
@@ -85,11 +77,6 @@
 <ul>
 <li>Aura,氣場,人體能量場,輝光,暉光,靈氣</li>
 <li>範圍涵蓋人體周圍電磁粒子</li>
-</ul>
-<h2 id="aura氣場起源">Aura氣場起源 </h2>
-<ul>
-<li>西元前500-700年,印度的奧義書有提到五層能量場,但是沒有提到光</li>
-<li>西元前320年,葛洪(號抱朴子),第一次以文獻方式紀錄人體周圍的光環及光</li>
 </ul>
 <h2 id="aura氣場七層">Aura氣場七層 </h2>
 <ul>
