--- a/index-en.html
+++ b/index-en.html
@@ -52,9 +52,9 @@ your past-life influences, your present state, and your future potential.</p>
 <h2 id="payment-paypal">Payment (Paypal) </h2>
 <ul>
 <li><a href="https://www.paypal.com/ncp/payment/5M7YTG2PM4HCL">One-time Aura Reading</a></li>
-<li><a href="./subscription-personal.html">Personal Aura Reading Monthly Subscription</a>: Unlimited questions per month with one response per week. Ideal for individuals who want to regularly understand their energy state.</li>
-<li><a href="./subscription-family.html">Family Aura Reading Monthly Subscription (up to 3 people)</a>: Shared access for family members, with unlimited questions per month and one response per week. Ideal for families who want insight into their overall family energy.</li>
-<li><a href="./subscription-friends.html">Friends Aura Reading Monthly Subscription (2-person plan)</a>: Shared by two friends, with unlimited questions per month and one response per week. Ideal for friends who want to explore energy together.</li>
+<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-9327408615231862CNEURGOI">Personal Aura Reading Monthly Subscription</a>: Unlimited questions per month with one response per week. Ideal for individuals who want to regularly understand their energy state.</li>
+<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-67R16583C3936594SNEURJKI">Family Aura Reading Monthly Subscription (up to 3 people)</a>: Shared access for family members, with unlimited questions per month and one response per week. Ideal for families who want insight into their overall family energy.</li>
+<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-3M724631HW081202XNEURMAY">Friends Aura Reading Monthly Subscription (2-person plan)</a>: Shared by two friends, with unlimited questions per month and one response per week. Ideal for friends who want to explore energy together.</li>
 </ul>
 <h2 id="collaboration">Collaboration </h2>
 <ul>
