--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 <h2 id="付款方式-paypal">付款方式 (Paypal) </h2>
 <ul>
 <li><a href="https://www.paypal.com/ncp/payment/5M7YTG2PM4HCL">一次性氣場解讀</a></li>
-<li><a href="./subscription-personal.html">個人 Aura Reading 月訂閱</a> 提供每月無限次數提問，每週回覆一次。適合希望定期了解能量狀態的個人。</li>
-<li><a href="./subscription-family.html">家庭 Aura Reading 月訂閱（最多 3 人）</a> 提供家庭成員共同使用，每月無限次數提問，每週回覆一次。適合希望了解家庭整體能量狀態的家庭。</li>
-<li><a href="./subscription-friends.html">朋友分享 Aura Reading 月訂閱（2 人方案）</a> 提供 2 位朋友共享，每月無限次數提問，每週回覆一次。適合想一起探索能量的朋友組合。</li>
+<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-1A242348KM810422RNEURFKA">個人 Aura Reading 月訂閱</a> 提供每月無限次數提問，每週回覆一次。適合希望定期了解能量狀態的個人。</li>
+<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-1GT743292R9991809NEURI2I">家庭 Aura Reading 月訂閱（最多 3 人）</a> 提供家庭成員共同使用，每月無限次數提問，每週回覆一次。適合希望了解家庭整體能量狀態的家庭。</li>
+<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-5P259692CH450731XNEURLHQ">朋友分享 Aura Reading 月訂閱（2 人方案）</a> 提供 2 位朋友共享，每月無限次數提問，每週回覆一次。適合想一起探索能量的朋友組合。</li>
 </ul>
 <h2 id="合作">合作 </h2>
 <ul>
