--- a/index-en.html
+++ b/index-en.html
@@ -39,6 +39,7 @@ your past-life influences, your present state, and your future potential.</p>
 <li>Threads  <a href="https://www.threads.com/@taomuru">@taomuru</a></li>
 <li>Youtube  <a href="https://www.youtube.com/@thaolaxd">https://www.youtube.com/@thaolaxd</a></li>
 <li>Telegram @lightaurastudio</li>
+<li>Email: <a href="mailto:taomuru@gmail.com">taomuru@gmail.com</a></li>
 <li>Book Aura Reading Session <a href="https://calendly.com/taomuru/new-meeting">https://calendly.com/taomuru/new-meeting</a></li>
 </ul>
 <h2 id="service-method">Service Method </h2>
@@ -55,6 +56,7 @@ your past-life influences, your present state, and your future potential.</p>
 <li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-9327408615231862CNEURGOI">Personal Aura Reading Monthly Subscription</a>: Unlimited questions per month with one response per week. Ideal for individuals who want to regularly understand their energy state. AUD 100 per month.</li>
 <li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-67R16583C3936594SNEURJKI">Family Aura Reading Monthly Subscription (up to 3 people)</a>: Shared access for family members, with unlimited questions per month and one response per week. Ideal for families who want insight into their overall family energy. AUD 180 per month.</li>
 <li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-3M724631HW081202XNEURMAY">Friends Aura Reading Monthly Subscription (2-person plan)</a>: Shared by two friends, with unlimited questions per month and one response per week. Ideal for friends who want to explore energy together. AUD 120 per month.</li>
+<li>After payment, please provide the PayPal email address you used for the payment.</li>
 </ul>
 <h2 id="collaboration">Collaboration </h2>
 <ul>
