--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <li>Threads 帳號 <a href="https://www.threads.com/@taomuru">@taomuru</a></li>
 <li>Youtube 頻道 <a href="https://www.youtube.com/@thaolaxd">https://www.youtube.com/@thaolaxd</a></li>
 <li>Telegram @lightaurastudio</li>
+<li>Email: <a href="mailto:taomuru@gmail.com">taomuru@gmail.com</a></li>
 <li>預約氣場諮詢 <a href="https://calendly.com/taomuru/new-meeting">https://calendly.com/taomuru/new-meeting</a></li>
 </ul>
 <h2 id="服務方式">服務方式 </h2>
@@ -67,6 +68,7 @@
 <li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-1A242348KM810422RNEURFKA">個人 Aura Reading 月訂閱</a> 提供每月無限次數提問，每週回覆一次。適合希望定期了解能量狀態的個人。每月台幣 1,800 元。</li>
 <li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-1GT743292R9991809NEURI2I">家庭 Aura Reading 月訂閱（最多 3 人）</a> 提供家庭成員共同使用，每月無限次數提問，每週回覆一次。適合希望了解家庭整體能量狀態的家庭。每月台幣 3,600 元。</li>
 <li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-5P259692CH450731XNEURLHQ">朋友分享 Aura Reading 月訂閱（2 人方案）</a> 提供 2 位朋友共享，每月無限次數提問，每週回覆一次。適合想一起探索能量的朋友組合。每月台幣 2,400 元。</li>
+<li>付款之後，請提供您Paypal付款Email。</li>
 </ul>
 <h2 id="合作">合作 </h2>
 <ul>
