--- a/index.html
+++ b/index.html
@@ -24,95 +24,58 @@
     
       <div class="crossnote markdown-preview  ">
       
-<h1 id="親子關係解讀看見孩子真正的內在需求">親子關係解讀｜看見孩子真正的內在需求 </h1>
-<p><a href="./index.html">中文</a> | <a href="./index-en.html">English</a> | <a href="./index-jp.html">日本語</a> | <a href="./index-kr.html">한국어</a></p>
-<h2 id="為何你需要親子關係解讀">為何你需要親子關係解讀？ </h2>
-<p>許多親子衝突，並不是因為「不夠愛」，<br>
-而是彼此<strong>無法真正理解對方的內在狀態</strong>。</p>
-<p>親子關係解讀，透過觀察孩子與父母之間的能量互動狀態，協助你看見：</p>
+<p><strong>繁體中文</strong> | <a href="./index-en.html">English</a></p>
+<h1 id="為何你需要做氣場解讀">為何你需要做氣場解讀? </h1>
+<p>氣場解讀會將你的身、心、靈完整地呈現出來，包含你知道或不知道的問題、願意或不願意面對的議題，以及你想解決卻卡住的困境。透過氣場解讀，你會得到一份清楚的「自我清單」，讓你知道該如何看見、理解並面對自己。</p>
+<p>氣場是你的人體能量場，當中包含你的全部：<br>
+你的過去世印記、目前的狀態，以及未來的可能性。</p>
+<h2>氣場解讀是一種 <strong>身心靈的深度分析</strong>，協助你看到真正的問題，找到那些你一直找不到的答案。</h2>
+<h2 id="聯絡方式">聯絡方式 </h2>
 <ul>
-<li>孩子目前真正的情緒狀態與內在需求</li>
-<li>親子之間卡住的溝通模式</li>
-<li>為何你已經很努力，卻仍然感覺無法靠近孩子</li>
-<li>如何用孩子「能接收到」的方式與他互動</li>
-</ul>
-<p>這不是責怪任何一方，而是協助父母 <strong>看懂關係背後真正發生的事</strong>。</p>
-<h2 id="什麼是親子關係解讀">什麼是親子關係解讀？ </h2>
-<p>親子關係解讀是一種以<strong>能量狀態為基礎的觀察方式</strong>，協助父母理解：</p>
-<ul>
-<li>孩子的情緒壓力來源</li>
-<li>親子之間的互動模式</li>
-<li>父母在關係中所扮演的角色</li>
-<li>哪些調整能讓關係自然鬆動，而非用力改變</li>
-</ul>
-<p>透過這樣的方式，你能更清楚知道：</p>
-<blockquote>
-<p>「孩子不是故意對抗，而是在用他能做到的方式求助。」</p>
-</blockquote>
-<h2 id="適合哪些家庭">適合哪些家庭？ </h2>
-<ul>
-<li>覺得孩子「講不聽、溝通困難」</li>
-<li>孩子情緒起伏大、容易焦慮或退縮</li>
-<li>親子之間容易衝突、誤解彼此</li>
-<li>希望用更溫和、不對立的方式陪伴孩子成長</li>
-<li>對能量、覺察、身心整合不排斥的家庭</li>
+<li>Line 帳號 @211wegrx</li>
+<li>IG 帳號 <a href="https://www.instagram.com/taomuru/">taomuru</a></li>
+<li>Threads 帳號 <a href="https://www.threads.com/@taomuru">@taomuru</a></li>
+<li>Youtube 頻道 <a href="https://www.youtube.com/@thaolaxd">https://www.youtube.com/@thaolaxd</a></li>
+<li>Telegram @lightaurastudio</li>
+<li>Email: <a href="mailto:taomuru@gmail.com">taomuru@gmail.com</a></li>
+<li>預約氣場諮詢 <a href="https://calendly.com/taomuru/new-meeting">https://calendly.com/taomuru/new-meeting</a></li>
 </ul>
 <h2 id="服務方式">服務方式 </h2>
 <ul>
-<li>線上諮詢（文字／語音／視訊皆可）</li>
-<li>提供一份 <strong>親子關係能量解讀說明</strong>（可指定語言，例如中文或英文）</li>
-<li>不提供醫療、心理治療或通靈服務</li>
-</ul>
-<h2 id="照片需求用於能量觀察">照片需求（用於能量觀察） </h2>
-<p>請提供一張清楚的全身照片，並參考圖片：</p>
-<ul>
-<li>掌心朝前</li>
-<li>背景以淺色牆面為佳</li>
-<li>建議穿著短袖、短褲</li>
-</ul>
-<p><img src="./aura-body.jpg" alt="氣場拍照姿勢"></p>
-<h2 id="服務方案與費用paypal">服務方案與費用（Paypal） </h2>
-<ul>
 <li>
-<p><strong>單次親子關係解讀</strong><br>
-每次 NT$1,000<br>
-<a href="https://www.paypal.com/ncp/payment/5M7YTG2PM4HCL">https://www.paypal.com/ncp/payment/5M7YTG2PM4HCL</a></p>
+<p>線上諮詢,可文字,語音或視訊</p>
 </li>
 <li>
-<p><strong>個人／家長月訂閱方案</strong><br>
-每月 NT$1,800<br>
-每週回覆一次，適合希望持續觀察與調整互動方式的家長<br>
-<a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-1A242348KM810422RNEURFKA">https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-1A242348KM810422RNEURFKA</a></p>
+<p>提供 Aura 基礎解讀報告一份(可指定報告的語文,例如英文,中文,等等)</p>
 </li>
 <li>
-<p><strong>家庭方案（最多 3 人）</strong><br>
-每月 NT$3,600<br>
-適合希望理解整體家庭互動狀態的家庭<br>
-<a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-1GT743292R9991809NEURI2I">https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-1GT743292R9991809NEURI2I</a></p>
+<p>提供一對一諮詢(額外收費)</p>
 </li>
 <li>
-<p><strong>朋友分享方案（2 人）</strong><br>
-每月 NT$2,400<br>
-<a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-5P259692CH450731XNEURLHQ">https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-5P259692CH450731XNEURLHQ</a></p>
+<p>不提供健康問題諮詢,不提供過世親人通靈</p>
+</li>
+<li>
+<p>需要提供一張全身照片, 並參考下方照片,注意人像比例跟姿勢, 頭頂上方空間佔據30%, 人佔據照片高度的20%, 腳底到最下方的空間佔據30%, 掌心向前, 背景最好是淡色的牆壁, 最好是短袖短褲<br>
+<img src="./aura-body.jpg" alt="氣場拍照姿勢"></p>
+</li>
+<li>
+<p>Google評價 <a href="https://g.page/r/CQfz6lbreLYLEBM/review">https://g.page/r/CQfz6lbreLYLEBM/review</a></p>
 </li>
 </ul>
-<p>付款完成後，請提供您的 PayPal 付款 Email。</p>
-<h2 id="聯絡方式">聯絡方式 </h2>
+<h2 id="付款方式-paypal">付款方式 (Paypal) </h2>
 <ul>
-<li>Line：@211wegrx</li>
-<li>IG：<a href="https://www.instagram.com/taomuru/">taomuru</a></li>
-<li>Threads：<a href="https://www.threads.com/@taomuru">taomuru</a></li>
-<li>YouTube：<a href="https://www.youtube.com/@thaolaxd">https://www.youtube.com/@thaolaxd</a></li>
-<li>Telegram：@lightaurastudio</li>
-<li>Email：<a href="mailto:taomuru@gmail.com">taomuru@gmail.com</a></li>
-<li>預約諮詢：<a href="https://calendly.com/taomuru/new-meeting">https://calendly.com/taomuru/new-meeting</a></li>
+<li><a href="https://www.paypal.com/ncp/payment/5M7YTG2PM4HCL">一次性氣場解讀</a>。每次台幣 1,000元。</li>
+<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-1A242348KM810422RNEURFKA">個人 Aura Reading 月訂閱</a> 提供每月無限次數提問，每週回覆一次。適合希望定期了解能量狀態的個人。每月台幣 1,800 元。</li>
+<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-1GT743292R9991809NEURI2I">家庭 Aura Reading 月訂閱（最多 3 人）</a> 提供家庭成員共同使用，每月無限次數提問，每週回覆一次。適合希望了解家庭整體能量狀態的家庭。每月台幣 3,600 元。</li>
+<li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-5P259692CH450731XNEURLHQ">朋友分享 Aura Reading 月訂閱（2 人方案）</a> 提供 2 位朋友共享，每月無限次數提問，每週回覆一次。適合想一起探索能量的朋友組合。每月台幣 2,400 元。</li>
+<li>付款之後，請提供您Paypal付款Email。</li>
 </ul>
-<h2 id="合作邀請">合作邀請 </h2>
+<h2 id="合作">合作 </h2>
 <ul>
-<li>歡迎心理輔導、教育、療癒相關單位合作</li>
-<li>公益或親職支持活動亦可洽詢</li>
+<li>歡迎療癒師,心理輔導諮商單位合作</li>
+<li>公益活動歡迎洽詢</li>
 </ul>
-<h2 id="aura-氣場示意圖">Aura 氣場示意圖 </h2>
+<h2 id="aura氣場圖">Aura氣場圖 </h2>
 <p><img src="./aura.jpg" alt="Aura氣場圖"></p>
 
       </div>
