--- a/index.html
+++ b/index.html
@@ -25,11 +25,68 @@
       <div class="crossnote markdown-preview  ">
       
 <p><strong>繁體中文</strong> | <a href="./index-en.html">English</a></p>
-<h1 id="為何你需要做氣場解讀">為何你需要做氣場解讀? </h1>
-<p>氣場解讀會將你的身、心、靈完整地呈現出來，包含你知道或不知道的問題、願意或不願意面對的議題，以及你想解決卻卡住的困境。透過氣場解讀，你會得到一份清楚的「自我清單」，讓你知道該如何看見、理解並面對自己。</p>
-<p>氣場是你的人體能量場，當中包含你的全部：<br>
-你的過去世印記、目前的狀態，以及未來的可能性。</p>
-<h2>氣場解讀是一種 <strong>身心靈的深度分析</strong>，協助你看到真正的問題，找到那些你一直找不到的答案。</h2>
+<h2 id="為什麼你可能需要-aura-reading">為什麼你可能需要 Aura Reading？ </h2>
+<p>許多人需要 aura reading，並不是因為「迷信」或「好奇」，<br>
+而是因為他們正在經歷一種狀態——<br>
+<strong>明明已經很努力了，卻還是卡在某個地方。</strong></p>
+<p>也許你有以下感受：</p>
+<ul>
+<li>明知道問題在哪，卻始終無法真正改變</li>
+<li>同樣的情緒、關係或狀況一再重複出現</li>
+<li>理性上沒問題，內在卻總覺得疲憊、空洞或不對勁</li>
+<li>嘗試過很多方法，但始終無法「整合」</li>
+</ul>
+<p>這些狀態，往往不是意志力或理解不足的問題，而是<strong>內在能量狀態尚未被看見與調整</strong>。</p>
+<h2 id="aura-reading-在做什麼">Aura Reading 在做什麼？ </h2>
+<p>Aura reading 並不是預測未來，也不是評斷對錯。<br>
+它的核心作用是——</p>
+<blockquote>
+<p><strong>幫助你看見自己目前真實的內在狀態。</strong></p>
+</blockquote>
+<p>每個人都在以一種「能量狀態」生活，而這個狀態會影響：</p>
+<ul>
+<li>你的情緒反應</li>
+<li>你吸引的人與事件</li>
+<li>你做決定的方式</li>
+<li>你是否能真正改變</li>
+</ul>
+<p>Aura reading 所做的，是協助你理解：</p>
+<ul>
+<li>你現在處在哪個狀態</li>
+<li>哪些能量在支持你，哪些在消耗你</li>
+<li>你是否正在使用不屬於自己的模式生活</li>
+</ul>
+<h2 id="為什麼有些問題只有-aura-reading-能幫得上忙">為什麼有些問題，只有 Aura Reading 能幫得上忙？ </h2>
+<h3 id="1-它能看見語言之前的層次">1. 它能看見「語言之前」的層次 </h3>
+<p>有些狀態並非想法或情緒，而是在更深層、尚未被語言化的層面。<br>
+這也是為什麼有時候「想通了」卻還是無法改變。</p>
+<p>Aura reading 可以直接看見這些潛在結構。</p>
+<h3 id="2-它關注的是狀態不是事件本身">2. 它關注的是「狀態」，不是事件本身 </h3>
+<p>很多問題並不是事件造成的，而是當下的內在狀態無法承載變化。<br>
+當狀態被調整，事情往往會自然改變，而不需要強迫自己努力。</p>
+<h3 id="3-它能分辨哪些是你哪些不是">3. 它能分辨哪些是「你」，哪些不是 </h3>
+<p>有些模式來自於：</p>
+<ul>
+<li>家族影響</li>
+<li>過去關係的殘留</li>
+<li>長期被他人投射的角色</li>
+</ul>
+<p>Aura reading 能幫助你分辨：<br>
+哪些能量是你真正的本質，哪些只是暫時附著的狀態。</p>
+<h2 id="誰適合進行-aura-reading">誰適合進行 Aura Reading？ </h2>
+<p>你可能特別適合，如果你正在經歷：</p>
+<ul>
+<li>重複的人生課題（關係、工作、自我價值）</li>
+<li>對「我是誰」感到模糊或失去方向</li>
+<li>長期疲憊、卡住，但檢查一切正常</li>
+<li>感覺自己不像自己</li>
+<li>想更理解內在狀態，而不只是解決表面問題</li>
+</ul>
+<h2 id="aura-reading-能帶來什麼">Aura Reading 能帶來什麼？ </h2>
+<p>它不會告訴你該怎麼做，<br>
+而是讓你<strong>看清自己正在用什麼狀態生活</strong>。</p>
+<p>當這一點被看見時，改變往往自然發生——<br>
+不是靠努力，而是回到真正適合你的狀態。</p>
 <h2 id="聯絡方式">聯絡方式 </h2>
 <ul>
 <li>Line 帳號 @211wegrx</li>
@@ -42,25 +99,10 @@
 </ul>
 <h2 id="服務方式">服務方式 </h2>
 <ul>
-<li>
-<p>線上諮詢,可文字,語音或視訊</p>
-</li>
-<li>
-<p>提供 Aura 基礎解讀報告一份(可指定報告的語文,例如英文,中文,等等)</p>
-</li>
-<li>
-<p>提供一對一諮詢(額外收費)</p>
-</li>
-<li>
-<p>不提供健康問題諮詢,不提供過世親人通靈</p>
-</li>
-<li>
-<p>需要提供一張全身照片, 並參考下方照片,注意人像比例跟姿勢, 頭頂上方空間佔據30%, 人佔據照片高度的20%, 腳底到最下方的空間佔據30%, 掌心向前, 背景最好是淡色的牆壁, 最好是短袖短褲<br>
-<img src="./aura-body.jpg" alt="氣場拍照姿勢"></p>
-</li>
-<li>
-<p>Google評價 <a href="https://g.page/r/CQfz6lbreLYLEBM/review">https://g.page/r/CQfz6lbreLYLEBM/review</a></p>
-</li>
+<li>不提供健康問題諮詢,不提供過世親人通靈</li>
+<li>需要提供一張全身照片, 並參考下方照片,注意人像比例跟姿勢, 頭頂上方空間佔據30%, 人佔據照片高度的20%, 腳底到最下方的空間佔據30%, 掌心向前, 背景最好是淡色的牆壁<br>
+<img src="./aura-body.jpg" alt="氣場拍照姿勢"></li>
+<li>Google評價 <a href="https://g.page/r/CQfz6lbreLYLEBM/review">https://g.page/r/CQfz6lbreLYLEBM/review</a></li>
 </ul>
 <h2 id="付款方式-paypal">付款方式 (Paypal) </h2>
 <ul>
@@ -69,11 +111,6 @@
 <li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-1GT743292R9991809NEURI2I">家庭 Aura Reading 月訂閱（最多 3 人）</a> 提供家庭成員共同使用，每月無限次數提問，每週回覆一次。適合希望了解家庭整體能量狀態的家庭。每月台幣 3,600 元。</li>
 <li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-5P259692CH450731XNEURLHQ">朋友分享 Aura Reading 月訂閱（2 人方案）</a> 提供 2 位朋友共享，每月無限次數提問，每週回覆一次。適合想一起探索能量的朋友組合。每月台幣 2,400 元。</li>
 <li>付款之後，請提供您Paypal付款Email。</li>
-</ul>
-<h2 id="合作">合作 </h2>
-<ul>
-<li>歡迎療癒師,心理輔導諮商單位合作</li>
-<li>公益活動歡迎洽詢</li>
 </ul>
 <h2 id="aura氣場圖">Aura氣場圖 </h2>
 <p><img src="./aura.jpg" alt="Aura氣場圖"></p>
